editoast/editoast_derive/src/snapshots/editoast_derive__view_error__tests__newtype__forwarded_view_error.snap
---
source: editoast_derive/src/view_error.rs
---
// Source
// -----------------------------------------------------------------------------

#[error(transparent)]
struct Wrapper(#[from] #[view_error] errors::InnerError);

// Macro expansion
// -----------------------------------------------------------------------------

impl crate::views::error::ViewError for Wrapper {
    fn label(&self) -> &'static str {
        match self {
            Self(_0) => crate::views::error::ViewError::label(_0),
        }
    }
    fn status(&self) -> axum::http::StatusCode {
        match self {
            Self(_0) => crate::views::error::ViewError::status(_0),
        }
    }
    fn sub_label(&self) -> Option<&'static str> {
        match self {
            Self(_0) => crate::views::error::ViewError::sub_label(_0),
        }
    }
    fn context(self) -> std::collections::HashMap<String, serde_json::Value> {
        match self {
            Self(_0) => crate::views::error::ViewError::context(_0),
        }
    }
    fn responses() -> Vec<crate::views::error::OpenApiResponse> {
        let mut responses = Vec::from([]);
        responses
            .extend(<errors::InnerError as crate::views::error::ViewError>::responses());
        responses
    }
}
impl utoipa::IntoResponses for Wrapper {
    fn responses() -> std::collections::BTreeMap<
        String,
        utoipa::openapi::RefOr<utoipa::openapi::response::Response>,
    > {
        <Self as crate::views::error::ViewError>::utoipa_responses().into()
    }
}
impl axum::response::IntoResponse for Wrapper {
    fn into_response(self) -> axum::response::Response {
        <Self as crate::views::error::ViewError>::into_response(self)
    }
}
