editoast/editoast_derive/src/snapshots/editoast_derive__view_error__tests__newtype__name_override.snap
---
source: editoast_derive/src/view_error.rs
---
// Source
// -----------------------------------------------------------------------------

#[view_error(name = "custom_name")]
struct NewType(String);

// Macro expansion
// -----------------------------------------------------------------------------

impl crate::views::error::ViewError for NewType {
    fn label(&self) -> &'static str {
        match self {
            Self(_0) => "custom_name",
        }
    }
    fn status(&self) -> axum::http::StatusCode {
        match self {
            Self(_0) => axum::http::StatusCode::INTERNAL_SERVER_ERROR,
        }
    }
    fn sub_label(&self) -> Option<&'static str> {
        None
    }
    fn context(self) -> std::collections::HashMap<String, serde_json::Value> {
        match self {
            Self(_0) => std::collections::HashMap::from([]),
        }
    }
    fn responses() -> Vec<crate::views::error::OpenApiResponse> {
        let responses = Vec::from([
            crate::views::error::OpenApiResponse {
                label: "custom_name",
                sub_label: None,
                message_template: None,
                status: axum::http::StatusCode::INTERNAL_SERVER_ERROR,
                context: Vec::from([]),
            },
        ]);
        responses
    }
}
impl utoipa::IntoResponses for NewType {
    fn responses() -> std::collections::BTreeMap<
        String,
        utoipa::openapi::RefOr<utoipa::openapi::response::Response>,
    > {
        <Self as crate::views::error::ViewError>::utoipa_responses().into()
    }
}
impl axum::response::IntoResponse for NewType {
    fn into_response(self) -> axum::response::Response {
        <Self as crate::views::error::ViewError>::into_response(self)
    }
}
